# 2D-FD-solver

./: .gitignore  AUTHORS  Doxyfile  Makefile  README.md  help.txt  requirements.txt
bindings/: .astylerc  .gitignore  Makefile  README.md  pyproject.toml  setup.py  solver.cpp  solver.h  solver.i
bindings/scripts/: setup_cuda.sh
bindings/src/: cuda_helper.cu  cuda_helper.h  cuda_solver.cpp  solver.cpp  solver.h
bindings/test/: test_solver.py
bindings/tests/: test.py  test_cuda_solver.cu  test_solver.h
config/: param.json  settings.json
res/: settings.json
src/: const.py  fieldGenerator.py  fields.py  mongoDBConnection.py  monitor.py  postProcessor.py  start.py  waves.py
